syntax = "proto3";
package proto;

//User By ID
message UserRequest {
  string userID = 1;
}

message UserResponse {
  string ID = 1;
  string email = 2;
  string username = 3;
  string firstName = 4;
  string lastName = 5;
}

//User By Email
message UserByEmailRequest {
  string email = 1;
}

service userServices {
  rpc GetUserByID(UserRequest) returns (UserResponse) {}
  rpc GetUserByEmail(UserByEmailRequest) returns (UserResponse) {}
}